fix featured stall keyword overlap on mobile

--- a/components/FeaturedStall.module.css
+++ b/components/FeaturedStall.module.css
@@ -99,6 +99,7 @@
   }
   .stallInfoContainer {
     max-height: 50%;
+    min-height: 50%;
   }
   .stallInfoContainer h1 {
     font-size: 1.5rem;
@@ -108,5 +109,8 @@
     top: 0;
     left: 0;
     bottom: unset;
+  }
+  .keywordsContainer {
+    min-height: 50%;
   }
 }
